src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Account_Global_Party_ID__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>This is a unique identifier for an account</description>
        <externalId>true</externalId>
        <inlineHelpText>This is a unique identifier for an account</inlineHelpText>
        <label>Global Party Identifier</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Archive_Date__c</fullName>
        <description>Holds the date when the record was last marked for Archival.</description>
        <inlineHelpText>Date Archive Indicator was set to &quot;Y&quot;.</inlineHelpText>
        <label>Archive Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Archive_Ind__c</fullName>
        <defaultValue>&quot;N&quot;</defaultValue>
        <description>&quot;Y&quot; Indicates that the record is ready for archival.</description>
        <inlineHelpText>&quot;Y&quot; indicates record is ready for archival.</inlineHelpText>
        <label>Archive Indicator</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>Country Name</description>
        <inlineHelpText>Country Name</inlineHelpText>
        <label>Country</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Grower__c</fullName>
        <label>Dealer/Grower ?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dealer</fullName>
                </value>
                <value>
                    <fullName>Grower</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Dealer_SFID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is used to select only the dealer accounts</description>
        <label>Dealer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Accounts</relationshipLabel>
        <relationshipName>GrowerAccounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HC_Integration_Key__c</fullName>
        <description>This field is for the temporary storage of an external id for the Heroku Connect Integration.  It will be used as necessary for parent-child relationships.  Further integrations will be via the Salesforce Record ID.</description>
        <externalId>true</externalId>
        <inlineHelpText>This field is for the temporary storage of an external id for the Heroku Connect Integration.  It will be used as necessary for parent-child relationships.  Further integrations will be via the Salesforce Record ID.</inlineHelpText>
        <label>Heroku Connect Integration Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Has_Account_Identifier__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Account Identifier ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Dealer_Business_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Dealer Business Role ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Grower_Business_Role__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Grower Business Role ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDM_Integration_Key__c</fullName>
        <description>MDM system party identifier for the Account.</description>
        <inlineHelpText>MDM system party identifier for the Account.</inlineHelpText>
        <label>MDM Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>POCEmail__c</fullName>
        <label>POCEmail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>RADL__c</fullName>
        <description>Temporary</description>
        <inlineHelpText>Temporary</inlineHelpText>
        <label>RADL</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Acquire</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
                <value>
                    <fullName>Light Touch</fullName>
                </value>
                <value>
                    <fullName>Retain</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Role_Description__c</fullName>
        <description>Temporary. Should be removed in a week</description>
        <inlineHelpText>Temporary. Should be removed in a week</inlineHelpText>
        <label>Role Description</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Accounts2</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Everything</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.CREATED_DATE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <recordTypes>
        <fullName>Account_Default</fullName>
        <active>true</active>
        <description>Default Record Type</description>
        <label>Account</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Individual</fullName>
        <active>true</active>
        <description>This record type is to be used for an Account which is associated with an Individual person (example: John Smith).  This Record Type should NOT be associated with a Partner/Community User.</description>
        <label>Individual</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Organization</fullName>
        <active>true</active>
        <description>This record type is to be used for an Account which is associated with an Organization (example: ABC incorporated).  This Record Type should NOT be associated with a Partner/Community User.</description>
        <label>Organization</label>
    </recordTypes>
    <recordTypes>
        <fullName>Account_Partner</fullName>
        <active>true</active>
        <description>This record type is to be used for any Partner Account associated with a user.  Accounts of this type should have the Parent Account populated with the Organization or Individual Account to which the Partner is related.  These Accounts should only be used</description>
        <label>Partner</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>